# sdrTcap

./: LICENSE.md  README.md  requirements.txt  rtl2file_cfg.toml  setup.cfg
helper_scripts/: rtl2file_reader.py  soapy2file_reader.py
rtl2file/: __main__.py  plottest.py  version.py
sdr2file/: CMakeLists.txt  sdr2file.cpp
sdr2zmq/: CMakeLists.txt  receiver_example.py  sdr2zmq.cpp
soapy2file/: CMakeLists.txt  README.md  soapy2file.cpp
soapy2file/bench/: CMakeLists.txt
