[metadata]
name = sdrTcap
version = attr: rtl2file.version.__version__
author = xaratustrah
url = https://github.com/xaratustrah/sdrTcap
description = Time Series Capture System based on Software Defined Radios
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Physics, Engineering, Stepper Motor
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: GUI
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    rtl2file = rtl2file.__main__:main
